--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   "keywords": [],
   "author": "Emanuele Favero <emafaux89@gmail.com> (https://emanuelefavero.com/)",
   "license": "MIT",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "mysql2": "^3.12.0"
+  }
 }
