--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
+    "csv-parser": "^3.2.0",
     "mysql2": "^3.12.0"
   },
   "devDependencies": {
